applications/zabbix/k8s/zabbix-config.yaml
# Zabbix Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    name: zabbix
