applications/zabbix/k8s/zabbix-web-external-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-external
  namespace: zabbix
  labels:
    app: zabbix-web
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 0.0.0.0/0
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: zabbix-web
